wp-content/themes/tool-box/sass/layout/_site-header.scss
.site-header {
  @extend %site-wrapper;

  .logo {
    margin-bottom: 56px;
    text-align: center;
  }

  .top-icons {
    background: url('images/bg-icons.png') center no-repeat;
    height: 86px;
    margin-right: -30px;
    padding-top: 17px;
    position: relative;
    text-align: center;
    width: 327px;
    z-index: 1;


    &__social {
      list-style: none;
      margin: 0;
      margin-bottom: 7px;
      padding: 0;

      li {
        display: inline-block;
        margin: 0 3px;
      }
    }

    &__links {
      color: white;
      font-size: 0.750em;
      font-weight: 300;

      a {
        color: white;
        text-transform: uppercase;
      }
    }
  }

  .menu {
    display: flex;
    justify-content: center;
    text-align: center;

    .navbar {
      padding: 0;

      @media (max-width: 1199.98px) {
        display: inline-block;
      }

      &-nav {
        display: inline-block;
        margin-left: 0;
        padding: 0;
        width: 100%;

        &__item {
          display: inline-block;

          &--dropdown {
            .dropdown-toggle::after {
              display: none;
            }

            &:hover>.dropdown-menu {
              display: block;
            }

            .dropdown-menu {
              position: absolute !important;

              &:hover {
                display: block;
              }

              .navbar-nav__item {
                display: block;

                a {
                  display: block;
                  font-weight: 300;
                  text-transform: capitalize;
                  @include font-size(16);
                }
              }
            }
          }
        }

        &__link {
          color: #000;
          font-size: 1.250rem;
          font-weight: 300;
          padding-left: 20px;
          padding-right: 20px;
          text-transform: uppercase;
        }
      }
    }
  }

  .mobile-header {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-bottom: 38px;
    min-height: 155px;
    padding-top: 30px;
    position: relative;

    .menu-icon {
      cursor: pointer;
      padding-top: 30px;
      position: relative;
      z-index: 9;
    }

    .logo {
      left: 0;
      margin: 0;
      position: absolute;
      right: 0;
      top: 30px;

      img {
        width: 125px;
      }
    }

    .icons-mobile {
      padding-top: 30px;
    }

    &__links {
      margin-top: 17px;
      text-align: right;

      a {
        color: black !important;
        display: block;
        font-weight: 300;
        text-transform: uppercase;
        @include font-size(12);
      }

    }
  }

  .top {
    &--desktop {
      justify-content: flex-end;

      @media (max-width: 991.98px) {
        display: none;
      }
    }

    &--mobile {
      display: none;

      @media (max-width: 991.98px) {
        display: block;
      }
    }

    &--fixed {
      background: white;
      justify-content: center;
      left: 0;
      margin: auto;
      padding: 12px 0;
      position: fixed;
      top: 0;
      transition: all .1s ease-in-out;
      width: 100%;
      z-index: 9;

      .top-icons {
        display: none !important;
      }

      .col-12 {
        flex: none;
        margin: 0;
        transition: all .2s ease-in-out;
        width: auto;
      }

      .logo {
        img {
          max-width: 49px;
        }
      }

      .dropdown-menu {
        top: 36px !important;
      }
    }
  }
}


.sidebar {
  background: #ffffff;
  height: 100%;
  left: 0;
  overflow-y: auto;
  padding: 30px 20px 20px;
  position: fixed;
  top: 0;
  transform: translateX(-270px);
  transition: all 0.5s;
  width: 270px;
  z-index: 100000;

  &-nav {
    list-style: none;
    margin: 0;
    padding: 0;

    &__item {
      border-bottom: 1px solid #DEDEDE;
      display: block;
      margin-bottom: 0;
      padding: 0;

      &--dropdown {
        .dropdown-menu {
          border: none;
          display: block;
          padding-left: 25px;
          position: relative;
          width: 100%;

          .navbar-nav__item {
            display: block;

            a {
              display: block;
              font-weight: 300;
              text-transform: capitalize;
              @include font-size(16);
            }
          }
        }
      }
    }

    &__link {
      color: #313131;
      display: block;
      font-weight: normal;
      font-weight: bold;
      letter-spacing: 0;
      line-height: 1.3em;
      margin: 0;
      padding: 12px 0 12px 0;
      position: relative;
      text-transform: uppercase;
    }
  }
}

.close-sidebar-nav {
  background: rgba(0, 0, 0, .8);
  color: #313131;
  cursor: pointer;
  font-size: 1.4em;
  height: 100%;
  left: 0;
  opacity: 0;
  padding: 10px;
  position: fixed;
  right: 0;
  text-decoration: none;
  top: 0;
  transition: all 0.5s;
  visibility: hidden;
  z-index: 100000;
}

.sidebar-active {
  overflow: hidden;

  .close-sidebar-nav {
    left: 270px;
    opacity: 1;
    visibility: visible;
  }

  .sidebar {
    left: 270px;
  }
}

